build/include/libee_sdk.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package ee-sdk/bindings/c */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "ee_sdk.go"

#include <stdlib.h>
#include <string.h>

// 配置结构体
typedef struct {
    const char* base_url;
    const char* api_key;
    int timeout_seconds;
    int retry_count;
} ee_config_t;

// 响应结构体
typedef struct {
    int status_code;
    char* body;
    size_t body_length;
    char* error_message;
} ee_response_t;

// 客户端句柄（不透明指针）
typedef struct ee_client ee_client_t;

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern ee_client_t* ee_client_create(ee_config_t* config);
extern void ee_client_destroy(ee_client_t* clientPtr);
extern ee_response_t* ee_execute_request(ee_client_t* clientPtr, char* method, char* path, char* body);
extern int ee_health_check(ee_client_t* clientPtr);
extern void ee_response_free(ee_response_t* response);

#ifdef __cplusplus
}
#endif